# streaming-tools

./: .gitignore  README.md  gstreamer_source_sei.py  parse_h264_sei.py  pyproject.toml
apps/livekit-publisher/: README.md  go.mod
apps/livekit-publisher/cmd/livekit-publisher/: main.go
apps/livekit-publisher/internal/cli/: app.go  room.go
apps/livekit-publisher/internal/publisher/: parse_test.go  session.go  types.go
apps/livekit_publisher/: README.md  go.mod  go.sum
apps/livekit_publisher/cmd/livekit_publisher/: main.go
apps/livekit_publisher/internal/cli/: app.go  room.go
apps/livekit_publisher/internal/publisher/: parse.go  session.go  session_test.go
apps/livekit_tester/: main.py  publisher.py  pyproject.toml  subscriber.py
apps/livekit_tester/common/: data.py
apps/livekit_tester/data_channels/: publisher.py  subscriber.py
apps/livekit_tester/data_tracks/: publisher.py  subscriber.py
samples/: generated_sei_avc.h264
tools/gstreamer_source/: README.md  gstreamer_receive_sei.py  gstreamer_source_sei.py  main.py  parse_h264_sei.py  pyproject.toml  test_sei_metadata.py
tools/gstreamer_source/samples/: annux-d-sample_timestamp_sei.h264  generated_sei.h264
