[project]
name = "livekit-tester"
version = "0.1.0"
description = "LiveKit tester for network video/data streaming"
requires-python = ">=3.10"
dependencies = [
    "livekit-api>=1.1.0",
    "livekit>=1.1.5",
    "msgspec>=0.20.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "data_channels", "data_tracks"]
